# waypoint

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  main.py  pyproject.toml
backend/core/: config.py  deps.py  scheduler.py  supabase.py
backend/models/: decomposition.py
backend/routers/: auth.py  dashboard.py  ingest.py  projects.py  webhooks.py  workspaces.py
backend/scripts/: reset_db.py
backend/services/: ai.py  diff.py  github.py  insights.py  matching.py  pdf.py  reconcile.py  scheduling.py
backend/tests/: conftest.py  fake_supabase.py  test_dashboard_api.py  test_diff.py  test_insights.py  test_matching.py  test_projects_api.py  test_webhooks_signature.py  test_workspaces_api.py
docs/: agent-behaviors.md  ai-stack.md  architecture.md  build-order.md  data-model.md  github-integration.md  product.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/workspaces/: page.tsx
frontend/src/components/gantt/: filter-bar.tsx  gantt-bar.tsx  gantt-chart.tsx  gantt-types.ts  gantt-utils.ts  index.ts  (+2 more)
frontend/src/hooks/: use-realtime-dashboard.ts  use-session.ts
frontend/src/lib/: api.ts
supabase/: config.toml
supabase/migrations/: 00001_initial_schema.sql  00002_matching_function.sql  00003_grant_default_privileges.sql  00004_profiles_github_token.sql  00005_task_ticket_detail.sql  00006_task_scheduling.sql  00007_team_members.sql  00008_workspace_schedule_config.sql
(+11 files in other folders)
